--- a/styles.css
+++ b/styles.css
@@ -312,14 +312,10 @@ p{
     padding-bottom: 40px;
   }
   .centreClass{
-    position: fixed;
+    position: absolute;
     top:0%;
     left:0%;
     margin-right:0%;
     transform: translate(0%, 0%);
   }
-}
-
-@media screen and (max-width:960px) {
-  /* bigger screens */
 }
