--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ display: none;
   background-color: rgb(242, 242, 242);
 }
 @media screen and (max-width:986px) {
+  .bookTitle{
+    font-size: 60px;
+  }
   .bookCover{
     width: 100%;
     padding-bottom: 40px;
