added font stack

--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,17 @@ body{
 }
 
 h2{
-  font-family: futura-pt;
+  font-family: futura-pt,"Trebuchet MS", Arial, sans-serif;
 }
 p1 {
-  font-family: futura-pt;
+  font-family: futura-pt,"Trebuchet MS", Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 22px;
   letter-spacing: 2px;
 }
 p2 {
-  font-family: futura-pt;
+  font-family: futura-pt,"Trebuchet MS", Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -40,13 +40,13 @@ width:60%;
   font-weight: 500;
 font-style: normal;
 font-size: 79px;
-font-family: futura;
+font-family: futura,"Trebuchet MS", Arial, sans-serif;
 
 
 }
 
 .quote{
-  font-family: futura-pt;
+  font-family: futura-pt,"Trebuchet MS", Arial, sans-serif;
 font-weight: 400;
 font-style: normal;
 font-size: 22px;
@@ -54,7 +54,7 @@ letter-spacing: 2px;
 text-transform: uppercase;
 }
 .quoteMobile{
-  font-family: futura-pt;
+  font-family: futura-pt,"Trebuchet MS", Arial, sans-serif;
 font-weight: 400;
 font-style: normal;
 font-size: 22px;
